--- a/team/src/main/resources/templates/shortener.html
+++ b/team/src/main/resources/templates/shortener.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>URL Shortener</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css"
-	href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" />
-<script type="text/javascript" src="webjars/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript"
-	src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/app.js">
-</script>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	  xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="header">
+	<title>URL Shortener</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" />
+	<script type="text/javascript" src="webjars/jquery/2.1.4/jquery.min.js"></script>
+	<script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../static/js/app.js"></script>
 </head>
 <body>
 	<div class="container-full">
