Shortener+ with users

--- a/team/src/main/resources/templates/infoUrl.html
+++ b/team/src/main/resources/templates/infoUrl.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="UTF-8"/>
+    <title>URLShortener+</title>
 </head>
 <body>
-$END$
+
+    <link rel="stylesheet" href="/css/dataTables.bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/jquery.dataTables.min.css" />
+    <!-- Bootstrap Core CSS -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet"/>
+
+    <div id="page-wrapper">
+
+        <div class="container-fluid">
+
+            <!-- Page Heading -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">
+                        URL Shortener Plus
+                    </h1>
+                </div>
+            </div>
+            <!-- /.row -->
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Shortened URL information</h3>
+                        </div>
+                        <div class="panel-body">
+                            <div class="table-responsive">
+                                <table id="urlInfo" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                                    <thead>
+                                    <tr>
+                                        <th>URL creator</th>
+                                        <th>Number of clicks</th>
+                                        <th>Date of creation</th>
+                                        <th>Target URL</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td th:text="${session.urlCreator}"></td>
+                                            <td th:text="${session.numberClicks}"></td>
+                                            <td th:text="${session.creationDate}"></td>
+                                            <td th:text="${session.targetUrl}"></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container-fluid -->
+
+    </div>
+    <!-- /#page-wrapper -->
+
+    <script src="/js/dataTables.bootstrap.min.js"></script>
+    <script src="/js/jquery.dataTables.min.js"></script>
+    <!-- jQuery -->
+    <script src="/js/jquery.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="/js/bootstrap.min.js"></script>
+
 </body>
 </html>
