--- a/team/src/main/resources/templates/register.html
+++ b/team/src/main/resources/templates/register.html
@@ -5,12 +5,19 @@
 <head th:fragment="header">
     <meta charset="utf-8" />
     <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-    <link rel="stylesheet" href="../static/css/index.css"/>
+    <script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/index.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <title>Register</title>
 </head>
 
 <body>
+
+    <!-- /* Handle the flash message */-->
+    <th:block th:if="${message != null}">
+        <!-- /* The message code is returned from the @Controller */ -->
+        <div th:replace="fragments/alert :: alert (type=${#strings.toLowerCase(message.type)}, message=#{${message.message}(${message.args})})">&nbsp;</div>
+    </th:block>
 
     <div class="container">
         <h1 class="text-center">
@@ -29,37 +36,37 @@
                                 <a href="#" id="register-form-link">Registro</a>
                             </div>
                         </div>
-                        <hr>
+                        <hr/>
                     </div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-lg-12">
                                 <form id="login-form" action="/login" method="post" role="form" style="display: block;">
                                     <div class="form-group">
-                                        <input type="email" name="email" id="emailLogin" tabindex="1" class="form-control" placeholder="Email" value="" required="required">
+                                        <input type="email" name="email" id="emailLogin" tabindex="1" class="form-control" placeholder="Email" value="" required="required"/>
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" name="password" id="passwordLogin" tabindex="2" class="form-control" placeholder="Password" required="required">
+                                        <input type="password" name="password" id="passwordLogin" tabindex="2" class="form-control" placeholder="Password" required="required"/>
                                     </div>
                                     <div class="form-group">
                                         <div class="row">
                                             <div class="col-sm-6 col-sm-offset-3">
-                                                <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Accede">
+                                                <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Accede"/>
                                             </div>
                                         </div>
                                     </div>
                                 </form>
-                                <form id="register-form" action="/register" method="post" role="form"style="display: none;">
+                                <form id="register-form" action="/register" method="post" role="form" style="display: none;">
                                     <div class="form-group">
-                                        <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email" value="" required="required">
+                                        <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email" value="" required="required"/>
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" name="password" id="password" tabindex="1" class="form-control" placeholder="Password" value="" required="required">
+                                        <input type="password" name="password" id="password" tabindex="1" class="form-control" placeholder="Password" value="" required="required"/>
                                     </div>
                                     <div class="form-group">
                                         <div class="row">
                                             <div class="col-sm-6 col-sm-offset-3">
-                                                <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Regístrate">
+                                                <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Regístrate"/>
                                             </div>
                                         </div>
                                     </div>
