--- a/team/src/main/resources/templates/shortener.html
+++ b/team/src/main/resources/templates/shortener.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="header">
+<head>
 	<title>URL Shortener</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" />
 	<script type="text/javascript" src="webjars/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="../static/js/app.js"></script>
+	<script type="text/javascript" src="/js/app.js"></script>
 </head>
 <body>
+
+	<!-- /* Handle the flash message */-->
+	<th:block th:if="${message != null}">
+		<!-- /* The message code is returned from the @Controller */ -->
+		<div th:replace="fragments/alert :: alert (type=${#strings.toLowerCase(message.type)}, message=#{${message.message}(${message.args})})">&nbsp;</div>
+	</th:block>
+
 	<div class="container-full">
 		<div class="row">
 			<div class="col-lg-12 text-center">
 				<h1>URL Shortener</h1>
 				<p class="lead">A front-end example page for the project</p>
-				<br>
+				<br/>
 				<form class="col-lg-12" role="form" id="shortener" action="">
 					<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 						<input type="text" class="center-block form-control input-lg"
-							title="Enter a URL" placeholder="Enter a URL" name="url">
+							title="Enter a URL" placeholder="Enter a URL" name="url"/>
 						<span class="input-group-btn"><button
 								class="btn btn-lg btn-primary" type="submit">Short me!</button></span>
 					</div>
@@ -29,7 +36,7 @@
 		<div class="row">
 			<div class="col-lg-12 text-center">
 				<div class="col-sm-offset-4 col-sm-4 text-center">
-					<br />
+					<br/>
 					<div id="result" />
 				</div>
 			</div>
