--- a/team/src/main/resources/templates/shortener.html
+++ b/team/src/main/resources/templates/shortener.html
@@ -23,6 +23,10 @@
 				<h1>URL Shortener</h1>
 				<br/>
 				<form class="col-lg-12" role="form" id="shortener" action="">
+
+					<div class="checkbox">
+						<label><input type="checkbox" value="yes" name="sponsor"/>Sponsor</label>
+					</div>
 					<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 						<input type="text" class="center-block form-control input-lg"
 							title="Enter a URL" placeholder="Enter a URL" name="url"/>
