--- a/team/src/main/resources/templates/publicity.html
+++ b/team/src/main/resources/templates/publicity.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+    <title>Advertisement</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" />
+    <script type="text/javascript" src="webjars/jquery/2.1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/publicity.js"></script>
+</head>
 
 <body>
 
@@ -8,16 +16,8 @@
         <div class="col-lg-12 text-center">
             <h1>Page of publicity</h1>
             <br/>
+            <h2>You will be redirected to your requested page in <span id="time">10</span> seconds</h2>
         </div>
     </div>
-
-    <script th:inline="javascript">
-        function Redirect()
-        {
-            window.location= /*[[${url}]]*/;
-        }
-        document.write("You will be redirected to a new page in 10 seconds");
-        setTimeout('Redirect()', 10000);
-    </script>
 </body>
 </html>
