--- a/team/src/main/resources/templates/publicity.html
+++ b/team/src/main/resources/templates/publicity.html
@@ -14,7 +14,7 @@
 
     <div class="container-full">
         <div class="col-lg-12 text-center">
-            <h1>Page of publicity</h1>
+            <h1>This is an advertisement page!</h1>
             <br/>
             <h2>You will be redirected to your requested page in <span id="time">10</span> seconds</h2>
         </div>
