--- a/team/src/main/resources/templates/shortener.html
+++ b/team/src/main/resources/templates/shortener.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="webjars/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/js/app.js"></script>
+	<script type="text/javascript" src="/js/requests.js"></script>
 </head>
 <body>
 
@@ -16,6 +17,11 @@
 		<!-- /* The message code is returned from the @Controller */ -->
 		<div th:replace="fragments/alert :: alert (type=${#strings.toLowerCase(message.type)}, message=#{${message.message}(${message.args})})">&nbsp;</div>
 	</th:block>
+
+	<div class="alert alert-dismissable alert-danger" style="display:none" id="idRequestsError">
+		<button type="button" class="close" onclick="closeRequestError();">×</button>
+		<span>Error: exceeded the number of requests from this location to the hashed url!</span>
+	</div>
 
 	<div class="container-full">
 		<div class="row">
