Improvements to location, bugfixes and translations

--- a/team/src/main/resources/templates/shortener.html
+++ b/team/src/main/resources/templates/shortener.html
@@ -20,7 +20,7 @@
 
 	<div class="alert alert-dismissable alert-danger" style="display:none" id="idRequestsError">
 		<button type="button" class="close" onclick="closeRequestError();">×</button>
-		<span>Error: exceeded the number of requests from this location to the hashed url!</span>
+		<span>Error: only 1 petition every 10 seconds is allowed from the same location!</span>
 	</div>
 
 	<div class="container-full">
