--- a/team/src/main/resources/templates/register.html
+++ b/team/src/main/resources/templates/register.html
@@ -21,7 +21,7 @@
 
     <div class="container">
         <h1 class="text-center">
-            Bienvenido a URL Shortener
+            Welcome to URL Shortener!
         </h1>
         <br/>
         <div class="row">
@@ -30,10 +30,10 @@
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-xs-6">
-                                <a href="#" class="active" id="login-form-link">Acceso</a>
+                                <a href="#" class="active" id="login-form-link">Login</a>
                             </div>
                             <div class="col-xs-6">
-                                <a href="#" id="register-form-link">Registro</a>
+                                <a href="#" id="register-form-link">Register</a>
                             </div>
                         </div>
                         <hr/>
@@ -51,7 +51,7 @@
                                     <div class="form-group">
                                         <div class="row">
                                             <div class="col-sm-6 col-sm-offset-3">
-                                                <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Accede"/>
+                                                <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Login"/>
                                             </div>
                                         </div>
                                     </div>
@@ -66,7 +66,7 @@
                                     <div class="form-group">
                                         <div class="row">
                                             <div class="col-sm-6 col-sm-offset-3">
-                                                <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Regístrate"/>
+                                                <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register"/>
                                             </div>
                                         </div>
                                     </div>
