Sponsor page added

--- a/team/src/main/resources/templates/publicity.html
+++ b/team/src/main/resources/templates/publicity.html
@@ -19,5 +19,9 @@
             <h2>You will be redirected to your requested page in <span id="time">10</span> seconds</h2>
         </div>
     </div>
+    <div>
+        <iframe src="http://www.w3schools.com/" frameborder="0"
+                width="100%" height="1000"></iframe>
+    </div>
 </body>
 </html>
