--- a/team/src/main/resources/templates/shortener.html
+++ b/team/src/main/resources/templates/shortener.html
@@ -8,6 +8,24 @@
 	<script type="text/javascript" src="webjars/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/js/app.js"></script>
+	<script type="text/javascript" src="/js/requests.js"></script>
+
+	<script language="JavaScript">
+		function check(checkbox) {
+			if (checkbox.checked){
+				document.getElementById('publicity-url').style.display='block';
+				document.getElementById('time-publicity').style.display='block';
+				document.getElementById('textTimePublicity').style.display='block';
+			}
+			else{
+				document.getElementById('publicity-url').style.display='none';
+				document.getElementById('time-publicity').style.display='none';
+				document.getElementById('textTimePublicity').style.display='none';
+			}
+
+		}
+
+	</script>
 </head>
 <body>
 
@@ -17,33 +35,56 @@
 		<div th:replace="fragments/alert :: alert (type=${#strings.toLowerCase(message.type)}, message=#{${message.message}(${message.args})})">&nbsp;</div>
 	</th:block>
 
-	<div class="container-full">
-		<div class="row">
-			<div class="col-lg-12 text-center">
-				<h1>URL Shortener</h1>
-				<br/>
-				<form class="col-lg-12" role="form" id="shortener" action="">
-					<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
-						<input type="text" class="center-block form-control input-lg"
-							title="Enter a URL" placeholder="Enter a URL" name="url"/>
-						<span class="input-group-btn"><button
-								class="btn btn-lg btn-primary" type="submit">Short me!</button></span>
-					</div>
-
-					<div class="checkbox">
-						<label><input type="checkbox" value="yes" name="sponsor"/>Select to show ads</label>
-					</div>
-				</form>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12 text-center">
-				<div class="col-sm-offset-4 col-sm-4 text-center">
-					<br/>
-					<div id="result" />
-				</div>
-			</div>
-		</div>
+	<div class="alert alert-dismissable alert-danger" style="display:none" id="idRequestsError">
+		<button type="button" class="close" onclick="closeRequestError();">×</button>
+		<span>Error: only 1 petition every 10 seconds is allowed from the same location!</span>
 	</div>
+    <div class="container-full">
+    	<div class="row">
+	    	<div class="col-lg-12 text-center">
+			    <h1>URL Shortener</h1>
+			    <br/>
+			    <form class="col-lg-12" role="form" id="shortener" action="">
+			    	<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
+			    		<input type="text" class="center-block form-control input-lg"
+				    		   title="Enter a URL" placeholder="Enter a URL" name="url"/>
+					    <span class="input-group-btn">
+						    	<button class="btn btn-lg btn-primary" type="submit">Short me!</button>
+						</span>
+				    </div>
+			    	<br/>
+			    	<div class="checkbox">
+				    	<label>
+				    		<input type="checkbox" value="yes" name="sponsor" id="sponsor" onchange="check(this)"/>
+					    	Select to show ads
+				    	</label>
+				    </div>
+				    <br/>
+				    <div class= "input-group input-group-lg col-sm-offset-4 col-sm-4">
+				    	<input type="text" class="center-block form-control input-lg"
+				    		   placeholder="Enter a URL of publicity"
+				    		   name="publicity-url" id="publicity-url" style="display:none"/>
+				    </div>
+					<br/>
+			    	<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
+						<span id="textTimePublicity" style="display:none">Enter a time to view publicity:
+							<input placeholder="Enter a time" type="number" name="time-publicity"
+								   class="center-block form-control input-lg" id="time-publicity"
+								   min="0" step="1" value="0" style="display:none"/>
+						</span>
+			    	</div>
+
+			    </form>
+		    </div>
+	    </div>
+	    <div class="row">
+		    <div class="col-lg-12 text-center">
+		    	<div class="col-sm-offset-4 col-sm-4 text-center">
+					<br/>
+				    <div id="result" />
+			    </div>
+		    </div>
+	    </div>
+</div>
 </body>
 </html>
