--- a/team/src/main/resources/templates/publicity.html
+++ b/team/src/main/resources/templates/publicity.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>Advertisement</title>
@@ -7,17 +8,23 @@
     <link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" />
     <script type="text/javascript" src="webjars/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/publicity.js"></script>
+    <script th:inline="javascript" type="text/javascript" src="/js/publicity.js"></script>
 </head>
 
 <body>
+    <script type="text/javascript" th:inline="javascript" >
+       var timePublicity = /*[[${timePublicity}]]*/;
+    </script>
 
     <div class="container-full">
         <div class="col-lg-12 text-center">
             <h1>This is an advertisement page!</h1>
             <br/>
-            <h2>You will be redirected to your requested page in <span id="time">10</span> seconds</h2>
+            <h2>You will be redirected to your requested page in <span id="time" th:text = "${timePublicity}">10</span> seconds</h2>
         </div>
     </div>
+    <iframe th:src="${urlPublicity}">
+        <p>Your browser does not support iframes.</p>
+    </iframe>
 </body>
 </html>
