--- a/team/src/main/resources/templates/publicity.html
+++ b/team/src/main/resources/templates/publicity.html
@@ -9,20 +9,25 @@
     <script type="text/javascript" src="webjars/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/publicity.js"></script>
+    <style type="text/css">
+        *{padding:0;margin:0;}
+        html,body{height:100%;}
+        iframe{height:100%;width:100%;display:block;}
+    </style>
 </head>
 
 <body>
 
-    <div class="container-full">
-        <div class="col-lg-12 text-center">
-            <h1>This is an advertisement page!</h1>
-            <br/>
-            <h2>You will be redirected to your requested page in <span id="time" th:text = "${session.timePublicity}">10</span> seconds</h2>
-        </div>
+<div class="container-full">
+    <div class="col-lg-12 text-center">
+        <h1>This is an advertisement page!</h1>
+        <br/>
+        <h2>You will be redirected to your requested page in <span id="time" th:text = "${session.timePublicity}">10</span> seconds</h2>
     </div>
+</div>
 
-    <iframe th:src="${session.urlPublicity}">
-        <p>Your browser does not support iframes.</p>
-    </iframe>
+<iframe th:src="${session.urlPublicity}" frameborder="0" scrolling="auto">
+    <p>Your browser does not support iframes.</p>
+</iframe>
 </body>
 </html>
