--- a/team/src/main/resources/templates/shortener.html
+++ b/team/src/main/resources/templates/shortener.html
@@ -9,6 +9,8 @@
 	<script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/js/app.js"></script>
 	<script type="text/javascript" src="/js/requests.js"></script>
+	<script type="text/javascript" src="/js/updateLatitude.js"></script>
+	<script type="text/javascript" src="/js/updateLongitude.js"></script>
 	<script language="JavaScript">
 		function check(checkbox) {
 			if (checkbox.checked){
@@ -52,6 +54,8 @@
 								class="btn btn-lg btn-primary" type="submit">Short me!</button></span>
 					</div>
 
+					<br/>
+
 					<div class="checkbox">
 						<label><input type="checkbox" value="yes" name="sponsor"  id="sponsor" onchange="check(this)"/>Select to show ads</label>
 					</div>
@@ -70,13 +74,59 @@
 						</span>
 					</div>
 				</form>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12 text-center">
-				<div class="col-sm-offset-4 col-sm-4 text-center">
+
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<div class="col-sm-offset-4 col-sm-4 text-center">
+							<br/>
+							<div id="result" />
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-12" th:if="${session.user=='admin@admin.com'}">
 					<br/>
-					<div id="result" />
+
+					<h2>Write coordinates to block petitions</h2>
+
+					<br/>
+					<form class="col-lg-12" role="form" id="updateLatitude" action="/blockedLatitude" method="post">
+						<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
+							<input type="text" class="center-block form-control input-lg"
+								   title="Latitude" placeholder="Enter a Latitude" name="latitude" id="idInputLatitude"
+								   th:value="${session.blockedLatitude}"/>
+							<span class="input-group-btn"><button
+									class="btn btn-lg btn-primary" type="submit">Update latitude!</button></span>
+						</div>
+					</form>
+
+					<div class="row">
+						<div class="col-lg-12 text-center">
+							<div class="col-sm-offset-4 col-sm-4 text-center">
+								<br/>
+								<div id="resultLatitude" />
+							</div>
+						</div>
+					</div>
+
+					<form class="col-lg-12" role="form" id="updateLongitude" action="/blockedLongitude" method="post">
+						<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
+							<input type="text" class="center-block form-control input-lg"
+								   title="Longitude" placeholder="Enter a Longitude" name="longitude" id="idInputLongitude"
+								   th:value="${session.blockedLongitude}"/>
+							<span class="input-group-btn"><button
+									class="btn btn-lg btn-primary" type="submit">Update longitude!</button></span>
+						</div>
+					</form>
+
+					<div class="row">
+						<div class="col-lg-12 text-center">
+							<div class="col-sm-offset-4 col-sm-4 text-center">
+								<br/>
+								<div id="resultLongitude" />
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
