--- a/team/src/main/resources/templates/shortener.html
+++ b/team/src/main/resources/templates/shortener.html
@@ -9,8 +9,7 @@
 	<script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/js/app.js"></script>
 	<script type="text/javascript" src="/js/requests.js"></script>
-	<script type="text/javascript" src="/js/updateLatitude.js"></script>
-	<script type="text/javascript" src="/js/updateLongitude.js"></script>
+	<script type="text/javascript" src="/js/updateCoordinates.js"></script>
 	<script language="JavaScript">
 		function show(checkbox) {
 			if (checkbox.checked){
@@ -38,13 +37,13 @@
 
 	<div class="alert alert-dismissable alert-danger" style="display:none" id="idRequestsError">
 		<button type="button" class="close" onclick="closeRequestError();">×</button>
-		<span>Error: only 1 petition every 10 seconds is allowed from the same location!</span>
+		<span>Error: your location is currently blocked or timed out!</span>
 	</div>
 
 	<div class="container-full">
 		<div class="row">
 			<div class="col-lg-12 text-center">
-				<h1>URL Shortener</h1>
+				<a href="/" ><h1>URL Shortener</h1></a>
 				<br/>
 				<form class="col-lg-12" role="form" id="shortener" action="">
 					<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
@@ -90,40 +89,27 @@
 					<h2>Write coordinates to block petitions</h2>
 
 					<br/>
-					<form class="col-lg-12" role="form" id="updateLatitude" action="/blockedLatitude" method="post">
+					<form class="col-lg-12" role="form" id="updateCoordinates" action="" method="post">
 						<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 							<input type="text" class="center-block form-control input-lg"
 								   title="Latitude" placeholder="Enter a Latitude" name="latitude" id="idInputLatitude"
-								   th:value="${session.blockedLatitude}"/>
-							<span class="input-group-btn"><button
-									class="btn btn-lg btn-primary" type="submit">Update latitude!</button></span>
+								   th:value="${blockedLatitude}" required="required"/>
 						</div>
-					</form>
-
-					<div class="row">
-						<div class="col-lg-12 text-center">
-							<div class="col-sm-offset-4 col-sm-4 text-center">
-								<br/>
-								<div id="resultLatitude" />
-							</div>
-						</div>
-					</div>
-
-					<form class="col-lg-12" role="form" id="updateLongitude" action="/blockedLongitude" method="post">
+						<br/>
 						<div class="input-group input-group-lg col-sm-offset-4 col-sm-4">
 							<input type="text" class="center-block form-control input-lg"
 								   title="Longitude" placeholder="Enter a Longitude" name="longitude" id="idInputLongitude"
-								   th:value="${session.blockedLongitude}"/>
-							<span class="input-group-btn"><button
-									class="btn btn-lg btn-primary" type="submit">Update longitude!</button></span>
+								   th:value="${blockedLongitude}" required="required"/>
 						</div>
+						<br/>
+						<button class="btn btn-lg btn-primary" type="submit">Update coordinates!</button>
 					</form>
 
 					<div class="row">
 						<div class="col-lg-12 text-center">
 							<div class="col-sm-offset-4 col-sm-4 text-center">
 								<br/>
-								<div id="resultLongitude" />
+								<div id="resultUpdate" />
 							</div>
 						</div>
 					</div>
