Refactored redirect plus. Switched controller logic to services. Added JSON responses.

--- a/team/src/main/resources/templates/urlDown.html
+++ b/team/src/main/resources/templates/urlDown.html
@@ -13,7 +13,7 @@
     <div class="col-lg-12 text-center">
         <h1>The URL requested is down.</h1>
         <br/>
-        <h2> URL you are trying to access is down since : <span id="date" th:text = "${session.UltimaVezEnPie}"></span></h2>
+        <h2> The URL you are trying to access is down since : <span id="date" th:text = "${session.UltimaVezEnPie}"></span></h2>
     </div>
 </div>
 </body>
