--- a/team/src/main/resources/templates/publicity.html
+++ b/team/src/main/resources/templates/publicity.html
@@ -22,7 +22,7 @@
     <div class="col-lg-12 text-center">
         <h1>This is an advertisement page!</h1>
         <br/>
-        <h2>You will be redirected to your requested page in <span id="time" th:text = "${session.timePublicity}">10</span> seconds</h2>
+        <h2>You will be redirected to your requested page in <span id="time" th:text = "${session.timePublicity}"></span> seconds</h2>
     </div>
 </div>
 
