--- a/team/src/main/resources/templates/register.html
+++ b/team/src/main/resources/templates/register.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8" />
     <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/webjars/jquery/jquery.min.js"></script>
     <link rel="stylesheet" href="/css/index.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <title>Register</title>
 </head>
-
 <body>
 
     <!-- /* Handle the flash message */-->
@@ -41,7 +41,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-lg-12">
-                                <form id="login-form" action="/login" method="post" role="form" style="display: block;">
+                                <form id="login-form" action="/login" method="post" role="form" style="display: block;" >
                                     <div class="form-group">
                                         <input type="email" name="email" id="emailLogin" tabindex="1" class="form-control" placeholder="Email" value="" required="required"/>
                                     </div>
@@ -83,7 +83,6 @@
 
 <script>
     $(function() {
-
         $('#login-form-link').click(function(e) {
             $("#login-form").delay(100).fadeIn(100);
             $("#register-form").fadeOut(100);
@@ -100,6 +99,7 @@
         });
 
     });
+
 </script>
 
 </html>
